:sparkles: FEAT: Adicionado a lógica dos modais
Adicionei um modal principal que apenas recebe o conteudo de forma dinâmica, deixando cada modal separado em arquivos, diminuindo o código, facilitando a manutenção e componentizando a estrutura do projeto, alguns detalhes ainda serão retrabalhados, principalmente a estética, o que tem por agora é praticamente do antd puro com um ou outro css superficial, seguindo a lógica do css custom properties

--- a/frontend/src/styles/components.css
+++ b/frontend/src/styles/components.css
@@ -13,7 +13,17 @@
 
 /* Modal Content Styles */
 .selection-group {
-  margin-bottom: 16px;
+  margin-bottom: 10px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.selection-group-horizontal{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 2px;
 }
 
 .selection-group h4 {
@@ -45,4 +55,12 @@
   font-size: var(--price-font-size);
   color: var(--price-color);
   text-align: center;
+}
+
+.centered-input {
+  width: 40px !important;
+}
+
+.centered-input .ant-input-number-input {
+  text-align: center !important;
 }
