:recycle: Refactor: Estilização
Ajustes de css e disposição de elementos

--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -7,6 +7,7 @@
     --placeholder-bg: #f0f0f0;
     --placeholder-text: #999;
     --price-color: #1890ff;
+    --header-bg-color: darkcyan;
 
     /*Typography*/
     --price-font-weight: bold;
